[gd_scene load_steps=6 format=3 uid="uid://bh8wq1x6q7f6x"]

[ext_resource type="Script" uid="uid://bb7acnypy5xhr" path="res://mixer/channel/master_channel.gd" id="1_kgjr8"]
[ext_resource type="LabelSettings" uid="uid://be4xqm441ll6q" path="res://mixer/channel/info_label_settings.tres" id="2_33ky3"]
[ext_resource type="Script" uid="uid://bv3u7kki6mrx0" path="res://mixer/channel/auto_scroll.gd" id="3_mhgvy"]
[ext_resource type="PackedScene" uid="uid://bdq03txeg4kos" path="res://mixer/channel/basic_components/volume_slider.tscn" id="6_1wyd1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3nd4w"]
bg_color = Color(0.224905, 0.224905, 0.224905, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MasterChannel" type="PanelContainer"]
custom_minimum_size = Vector2(80, 500)
offset_right = 144.0
offset_bottom = 1079.0
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_3nd4w")
script = ExtResource("1_kgjr8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Info" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/Info"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Info/MarginContainer2"]
layout_mode = 2

[node name="ChannelLabel" type="Label" parent="VBoxContainer/Info/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.398793, 0.398793, 0.398793, 1)
layout_mode = 2
text = "Master"
label_settings = ExtResource("2_33ky3")
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Info/MarginContainer2/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3
script = ExtResource("3_mhgvy")

[node name="NameLabel" type="Label" parent="VBoxContainer/Info/MarginContainer2/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Master"
label_settings = ExtResource("2_33ky3")
horizontal_alignment = 1

[node name="Controls" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Controls"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VolumeSlider" parent="VBoxContainer/Controls/VBoxContainer" instance=ExtResource("6_1wyd1")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Controls/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
